[tool.poetry]
name = "nc-llm-python"
version = "0.1.0"
description = ""
authors = ["Marcel Klehr <mklehr@gmx.net>"]
readme = "README.md"
packages = [{include = "nc_llm_python"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.192"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
gpt4all = "^0.3.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
