[tool.poetry]
name = "nc-llm-python"
version = "0.1.0"
description = ""
authors = ["Marcel Klehr <mklehr@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.312"
torch = {version = "^2.0.1+cpu", source = "pytorch"}
gpt4all = "1.x"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
